# FullStackWeb

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/contact/: models.py  serializers.py  urls.py  views.py
backend/contact/migrations/: 0001_initial.py
backend/portfolio_project/: .env  .env.template  auth.py  celery.py  settings.py  test_settings.py  urls.py
backend/services/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/services/fixtures/: services.json
backend/services/management/commands/: add_default_services.py  backup_db.py  create_superuser.py
backend/services/migrations/: 0001_initial.py  0002_servicecategory_featured.py  0003_remove_servicecategory_featured.py  0004_alter_service_image.py  0005_service_features.py  0006_alter_service_features.py  0007_remove_service_category_remove_service_price_and_more.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/animations/: FadeIn.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/api/: auth.ts  (+1 more)
